# __SideProject__Comment-Detector

./: .gitignore  README.md  configuration.py  dashboard.py  pyproject.toml  requirements.txt
crawler/: Dockerfile  aggregate_mongo.py  config_crawl.py  crawl_ptt_gossip.py  crawling_ptt_testing.py  dag_crawling.py  dag_crawling_history.py  dag_crawling_latest.py  dag_testing.py  docker-compose.yaml  docker-compose_remote_logging.yaml  insert_into_mongo_batch.py  operations_mongo.py  requirements.txt  utils_crawl.py
dashboard/: dashboard.py  dashboard_3d.py
data_processing/: aggregate_mongo.py  exploration_scatter_plot.py  explortation_concurrency.py  func_insert_pg_from_mongo.py  func_make_graph_grom_pg_2D.py  func_make_graph_grom_pg_3D.py  inserting_into_neo4j.py  operations_neo4j.py  stopwords.txt  transforming_mongo_data.py  utils_mongo.py
data_quality_monitoring/: data_quality_examination.py
logging_and_monitoring/: monitoring_dashboard_layout.json
miscellanious/: test_connection_postgres_rds.py  test_connection_redis_cache.py
miscellenious/: dag_testing.py  test_connection_mongo_atlas.py  test_connection_postgres_rds.py  test_connection_redis_cache.py
server/: background_worker.py  cloud_logging.py  dash_app.py  dash_app_commenter.py  dash_app_detail.py  dash_app_keyword.py  dash_app_overview.py  main.py  operations_account.py  requirements.txt  supervisord.conf  utils_mongodb.py
stress_test/: stress_test_api.js
tests/: config.py  create_html_file.py  example_article_abnormal.html  example_article_normal.html  for_creating_index.html  mock_data.py  (+28 more)
(+52 files in other folders)
